<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            android:id="@+id/adTypeText"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/adTypeText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/adTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:minWidth="128dp"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            android:id="@+id/adServerText"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/adServerText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/adServerSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:minWidth="128dp"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/adSizeRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            android:id="@+id/adSizeText"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/adSizeText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/adSizeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:minWidth="128dp"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/supplyPartnerIdRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            android:id="@+id/supplyPartnerIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/supplyPartnerIdText"
            android:textSize="16sp"
            android:textStyle="bold" />

<!--        <EditText-->
<!--            android:id="@+id/autoRefreshInput"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="end"-->
<!--            android:gravity="center"-->
<!--            android:inputType="phone"-->
<!--            android:minWidth="128dp"-->
<!--            android:minHeight="48dp" />-->

        <EditText
            android:id="@+id/supplyPartnerIdInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:inputType="phone"
            android:minWidth="128dp"
            android:minHeight="48dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/adUnitIdRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="0dp">

        <TextView
            android:id="@+id/adUnitIdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="48dp"
            android:padding="8dp"
            android:text="@string/adUnitIdText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!--        <EditText-->
        <!--            android:id="@+id/autoRefreshInput"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="end"-->
        <!--            android:gravity="center"-->
        <!--            android:inputType="phone"-->
        <!--            android:minWidth="128dp"-->
        <!--            android:minHeight="48dp" />-->

        <EditText
            android:id="@+id/adUnitIdInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="center"
            android:inputType="phone"
            android:minWidth="128dp"
            android:text="db213b75a2524330900c05e17e79f815"
            android:minHeight="48dp" />
    </LinearLayout>

    <Button
        android:id="@+id/showAd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="showAd"
        android:text="@string/buttonText" />

</LinearLayout>
